fix width of status on tablet

--- a/views/styles/qduke/qduke.styl
+++ b/views/styles/qduke/qduke.styl
@@ -77,10 +77,10 @@ body
 			height 60px
 			font-size 1.3em
 			line-height 2.8em
-			@media only screen and (max-width: 915px) // if narrow
-				width col3in4
-			@media only screen and (max-width: 549px) // if really narrow
-				width col1
+			// @media only screen and (max-width: 915px) // if narrow
+			// 	width col3in4
+			// @media only screen and (max-width: 549px) // if really narrow
+			// 	width col1
 		.boxLogo
 			background #555
 			font-size 2em
@@ -357,7 +357,7 @@ body
 	.promo
 		a
 			color qBlue
-		a:hover, a:focus  // TODO(rivkees): add coma
+		a:hover, a:focus
 			color qHover
 	p.bugs
 		color qDGray
